[gd_scene load_steps=4 format=3 uid="uid://r1e5c05nuwd8"]

[ext_resource type="PackedScene" uid="uid://b1s6oyfuvge2l" path="res://Scenes/UI/game_over_screen.tscn" id="1_f4sbr"]
[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="1_pwn12"]
[ext_resource type="PackedScene" uid="uid://cas0mydg6jubu" path="res://Scenes/UI/main_menu.tscn" id="3_ryyvi"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_pwn12")

[node name="GameOverScreen" parent="." instance=ExtResource("1_f4sbr")]
visible = false

[node name="MainMenu" parent="." instance=ExtResource("3_ryyvi")]

[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
